project(
  'echo-server-cpp',
  'cpp',
  version : '0.1',
  meson_version : '>= 1.3.0',
  default_options : ['warning_level=3', 'cpp_std=c++23'],
)

subdir('00 - Logging')
subdir('01 - Trivial')
subdir('02 - Polling')
subdir('03 - Using Classes')
subdir('04 - OpenSSL Guide Example')
subdir('05 - OpenSSL BIO no TLS')
subdir('06 - OpenSSL BIO with TLS')
subdir('07 - Class Based Poller')
subdir('08 - Addresses')
subdir('09 - Class Based Poller with TLS')
subdir('10 - Class base Poller with TLS and Signals')
